# py-prisma2markdown

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
src/: cli.py  main.py  mermaid.py  model.py  relations.py
tests/fixtures/: markdown_anchor.md  markdown_target.md
tests/fixtures/prisma-examples/: README.md
tests/fixtures/prisma-examples/databases/cockroachdb/prisma/: schema.md  schema.prisma
tests/fixtures/prisma-examples/databases/mongodb/prisma/: schema.md
tests/fixtures/prisma-examples/databases/sql-server/prisma/: schema.md  schema.prisma
tests/fixtures/prisma.io/: README.md  start-from-scratch-relational-databases.md
